--- a/laf/static/css/admin_dash.css
+++ b/laf/static/css/admin_dash.css
@@ -26,3 +26,32 @@ body {
     padding: 20px;
     width: 100%;
 }
+
+stats {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: flex-start;
+    margin-top: 20px;
+}
+
+.stat {
+    background-color: #f4f4f4;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    width: 200px;
+    text-align: center;
+}
+
+.stat h3 {
+    margin: 0;
+    font-size: 1.2em;
+    color: #333;
+}
+
+.stat p {
+    margin: 5px 0 0;
+    font-size: 1.5em;
+    color: #007BFF;
+}
